HTM/SQL: Reworked GM shop for CT2.3 & some teleport fixes, thanks Bloodshed.

--- a/trunk/datapack_development/data/html/admin/gmshops.htm
+++ b/trunk/datapack_development/data/html/admin/gmshops.htm
@@ -1,124 +1,72 @@
 <html><title>Shop</title><body>
 <center>
-<table width=280>
-<tr>
-<td width=40><button value="Main" action="bypass -h admin_admin" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td width=180><center>GMShop</center></td>
+<table width=260>
+<tr><td width=40><button value="Main" action="bypass -h admin_admin" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td width=180><center>GM Shop</center></td>
 <td width=40><button value="Back" action="bypass -h admin_admin" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr>
-</table><br>
-<table>
+</tr></table>
+</center>
+<br>
+<br>
+<center>
+<table width=260>
 <tr>
-<td width=120>Attack:</td>
-<td width=120>Defense:</td>
-<td width=120>Accesories:</td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_help gmshop/Weapons.htm"><font color="LEVEL">Weapons</font></a></td>
-<td><a action="bypass -h admin_help gmshop/Armors.htm"><font color="LEVEL">Armors</font></a></td>
-<td><a action="bypass -h admin_help gmshop/Jewels.htm"><font color="LEVEL">Jewels</font></a></td>
+<td align=center><button action="bypass -h admin_help gmstore/gear/weapons.htm" value="Weapons" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_help gmstore/gear/armor.htm" value="Armor" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_buy 9914" value="Bracelets" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 <tr>
-<td><a action="bypass -h admin_buy 2012"><font color="LEVEL">Magic Books</font></a></td>
-<td><a action="bypass -h admin_help gmshop/sets.htm"><font color="LEVEL">Armor sets</font></a></td>
-<td><a action="bypass -h admin_buy 9121"><font color="LEVEL">Hair</font></a></td>
+<td align=center><button action="bypass -h admin_help gmstore/gear/jewels.htm" value="Jewels" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_buy 9913" value="Shirts" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_buy 9915" value="Talisman" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 <tr>
-<td><a action="bypass -h admin_buy 300527"><font color="LEVEL">Fishing Rods</font></a></td>
-<td><a action="bypass -h admin_buy 1007"><font color="LEVEL">Underwear</font></a></td>
-<td><a action="bypass -h admin_buy 1011"><font color="LEVEL">Tattoos</font></a></td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_help gmshop/pets.htm"><font color="LEVEL">Pets</font></a></td>
-<td><a action="bypass -h admin_buy 1006"><font color="LEVEL">Cloaks</font></a></td>
-<td><a action="bypass -h admin_buy 300533"><font color="LEVEL">Event/Echo</font></a></td>
-</tr>
-</table><br>
-<table>
-<tr>
-<td width=160>Material:</td>
-<td width=160>Consumable:</td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_help gmshop/materials.htm"><font color="LEVEL">Craft Items</font></a></td>
-<td><a action="bypass -h admin_buy 3001"><font color="LEVEL">Potions</font></a></td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_help gmshop/recipes.htm"><font color="LEVEL">Recipes</font></a></td>
-<td><a action="bypass -h admin_help gmshop/Dyes.htm"><font color="LEVEL">Dyes</font></a></td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_help gmshop/QuestItems.htm"><font color="LEVEL">Quest items</font></a></td>
-<td><a action="bypass -h admin_buy 3002"><font color="LEVEL">Scrolls</font></a></td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_help gmshop/SpellBooks.htm"><font color="LEVEL">SpellBooks</font></a></td>
-<td><a action="bypass -h admin_buy 300537"><font color="LEVEL">Chests</font></a></td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_buy 300536"><font color="LEVEL">Seeds</font></a></td>
-<td><a action="bypass -h admin_buy 300529"><font color="LEVEL">Tickets</font></a></td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_buy 300532"><font color="LEVEL">Fishing Material</font></a></td>
-<td><a action="bypass -h admin_help gmshop/Fishing.htm"><font color="LEVEL">Fishes</font></a></td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_buy 300534"><font color="LEVEL">Crystals/Gemstones</font></a></td>
-<td><a action="bypass -h admin_buy 300511"><font color="LEVEL">Shots</font></a></td>
+<td align=center><button action="bypass -h admin_help gmstore/gear/belts.htm" value="Belts" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_buy 9909" value="Cloaks" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
-<p><br></p>
-<table>
-<tr><td width=160>C5 Items:</td><td width=160></td></tr>
+<br>
+<table width=260>
 <tr>
-<td><a action="bypass -h admin_buy 71025"><font color="LEVEL">Weapons w/o SA</font></a></td>
-<td><a action="bypass -h admin_buy 71021"><font color="LEVEL">Armors</font></a></td>
+<td align=center><button action="bypass -h admin_help gmstore/pets.htm" value="Pets" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_help gmstore/fishing.htm" value="Fishing" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_help gmstore/hair.htm" value="Hair" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 <tr>
-<td><a action="bypass -h admin_buy 71022"><font color="LEVEL">Weapons w/SA</a></td>
-<td><a action="bypass -h admin_buy 71024"><font color="LEVEL">Jewels</font></a></td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_buy 71026"><font color="LEVEL">Monster-only weapons</font></a></td>
-<td><a action="bypass -h admin_buy 71023"><font color="LEVEL">Hair Accesories</font></a></td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_buy 71027"><font color="LEVEL">Spellbooks</font></a></td>
-<td><a action="bypass -h admin_buy 71029"><font color="LEVEL">Tickets</font></td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_buy 71030"><font color="LEVEL">Recipes</font></a></td>
-<td><a action="bypass -h admin_buy 71028"><font color="LEVEL">Seeds</font></a></td>
+<td align=center><button action="bypass -h admin_help gmstore/quest.htm" value="Quest Items" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_buy 9916" value="Currency" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
-<p><br></p>
-<table>
-<tr><td width=160>Interlude Items:</td><td width=160></td></tr>
+<br>
+<table width=260>
 <tr>
-<td><a action="bypass -h admin_buy 71031"><font color="LEVEL">Weapons</font></a></td>
-<td><a action="bypass -h admin_buy 71032"><font color="LEVEL">Hair Accesories</font></a></td>
+<td align=center><button action="bypass -h admin_buy 9938" value="Shots" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_help gmstore/scrolls.htm" value="Scrolls" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_help gmstore/craft.htm" value="Craft Area" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td align=center><button action="bypass -h admin_buy 9927" value="SA Crystals" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_buy 9939" value="Crystal/Gem" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td align=center><button action="bypass -h admin_buy 9928" value="Potions" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_buy 9929" value="Elixirs" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_buy 9948" value="Dyes" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
-<p><br></p>
-<table>
-<tr><td width=160>Kamael Items:</td><td width=160></td></tr>
+<br>
+<table width=260>
 <tr>
-<td><a action="bypass -h admin_buy 9151"><font color="LEVEL">Helmets</font></a></td>
-<td><a action="bypass -h admin_buy 9152"><font color="LEVEL">Chests</font></a></td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_buy 9153"><font color="LEVEL">Legs</font></a></td>
-<td><a action="bypass -h admin_buy 9154"><font color="LEVEL">Gloves</font></a></td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_buy 9155"><font color="LEVEL">Boots</font></a></td>
-<td><a action="bypass -h admin_buy 9156"><font color="LEVEL">Shields</font></a></td>
-</tr>
-<tr>
-<td><a action="bypass -h admin_buy 9157"><font color="LEVEL">Weapons</font></a></td>
-<td><a action="bypass -h admin_buy 9158"><font color="LEVEL">Jewels</font></a></td>
+<td align=center><button action="bypass -h admin_buy 9902" value="Life Stones" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_buy 9903" value="Elemental" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_help gmstore/books.htm" value="Books" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
+<table width=260>
+<tr>
+<td>Item-ID: <edit var="itemid" width=50></td>
+<td>Amount: <edit var="itemnum" width=50></td>
+<td>&nbsp;<button value="Create Item" action="bypass -h admin_create_item $itemid $itemnum" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr></table>
 </center>
 </body></html>
