HTM: Adding a button for instancezone to "Admin Menu", thanks Bloodshed & Doing a small clean in "Admin Menu" to make htmls more easy for read, thanks Zealar.

--- a/trunk/datapack_development/data/html/admin/skills/Human/H_Cleric.htm
+++ b/trunk/datapack_development/data/html/admin/skills/Human/H_Cleric.htm
@@ -40,6 +40,7 @@
 <tr><td>Acumen (max 2)</td><td><button value="Add" action="bypass -h admin_add_skill 1085 $level" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
 <tr><td>Resist Fire (max 1)</td><td><button value="Add" action="bypass -h admin_add_skill 1191 $level" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
 <tr><td>Dryad Root (max 9)</td><td><button value="Add" action="bypass -h admin_add_skill 1201 $level" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
-<tr><td>Wind Walk (max 2)</td><td><button value="Add" action="bypass -h admin_add_skill 1204 $level" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
+<tr><td>Wind Walk (max 2)</td>
+<td><button value="Add" action="bypass -h admin_add_skill 1204 $level" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
 </table></center></font>
 </body></html>
