--- a/trunk/datapack_development/data/html/admin/main_menu.htm
+++ b/trunk/datapack_development/data/html/admin/main_menu.htm
@@ -59,4 +59,7 @@
 <td><button value="Strider" action="bypass -h admin_ride_strider" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Enchant" action="bypass -h admin_enchant" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="GM Shop" action="bypass -h admin_gmshop" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr></table></center></body></html>
+</tr><tr>
+<td><button value="Instance" action="bypass -h admin_help instancezone.htm" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table></center></body></html>
