--- a/trunk/datapack_development/data/html/admin/skills/Elf/E_Scout.htm
+++ b/trunk/datapack_development/data/html/admin/skills/Elf/E_Scout.htm
@@ -1,6 +1,5 @@
 <html><body><table width=260>
-<tr><td width=40>
-<button value="Main" action="bypass -h admin_admin" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
+<tr><td width=40><button value="Main" action="bypass -h admin_admin" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
 </td><td width=180>
 <center>Scout Skill Menu</center>
 </td><td width=40>
