HTM: Some more additions for GmShop, thanks Bloodshed.

--- a/trunk/datapack_development/data/html/admin/gmstore/craft.htm
+++ b/trunk/datapack_development/data/html/admin/gmstore/craft.htm
@@ -43,6 +43,16 @@
 <br>
 <table width=260>
 <tr>
+<td align=center>Gracia Section:</td>
+</tr>
+<tr>
+<td align=center><button action="bypass -h admin_buy 9968" value="Designs" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_buy 9969" value="Materials" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table>
+<br>
+<table width=260>
+<tr>
 <td align=center>Old Section:</td>
 </tr>
 <tr>
