--- a/trunk/datapack_development/data/html/admin/gmstore/scrolls.htm
+++ b/trunk/datapack_development/data/html/admin/gmstore/scrolls.htm
@@ -11,5 +11,7 @@
 <button action="bypass -h admin_buy 9930" value="Misc Scrolls" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_buy 9931" value="Enchant Scrolls" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_buy 9945" value="Buff Scrolls (Event)" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_buy 9970" value="Mercenary Transforms" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_buy 9971" value="Disguise Scroll" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 </center>
 </body></html>
