Some coordinate fixes and several text updates. (tnx Zealar)

--- a/trunk/datapack_development/data/html/default/32484.htm
+++ b/trunk/datapack_development/data/html/default/32484.htm
@@ -1,5 +1,4 @@
 <html><body>Pathfinder Worker:<br>
-Hail, adventurer.  Why do you look at me so?  Well, I dare say you wouldn't look any better if you hadn't slept in a week.  I may look a little unkempt and twitchy around the edges.  But better this than the alternative, which is a waking nightmare from which you NEVER return.<br>
-Do you have any money?  No, it’s not for liquor!  I'm sleep deprived, you lout.  Not some lush.  I simply need money to ...buy.......more...........coffee.............<br>
-(As he trails off, he starts snoring lightly)<br>
+Hail, brave adventurer! Why do look at me like that? If you hadn't slept in a week, you'd be a little less than fresh yourself! Still, better than the alternative: a nightmare from which you never awaken!<br>
+Say, can you spare come change? No, not for liquor! I told you -- I'm not a drunk, I just have to stay awake. I need coffee, and I need it now! I can already feel myself starting...to...drift off...(soft snores).<br>
 </body></html>
