--- a/trunk/datapack_development/data/html/default/BlessingOfProtection.htm
+++ b/trunk/datapack_development/data/html/default/BlessingOfProtection.htm
@@ -1,6 +1,6 @@
 <html><body>Novice Guide:<br>
-The protection blessing is a special protection given to <font color="LEVEL">characters under level 39 who have not made</font> the second transfer.<br>
-While a character has this blessing, <font color="LEVEL">he or she cannot either inflict or receive damage when</font> in combat with a chaotic character 10 or more levels higher than they are. The protection does not apply to the battle field, however.<br>
-Would you like to receive the protection?<br> 
-<a action="bypass -h npc_%objectId%_GiveBlessing">Receive the protection blessing.</a> 
+The Blessing of Protection is available to <font color="LEVEL">characters under level 39 who have not completed </font>their second class transfer.<br>
+Protected by its power, <font color="LEVEL">you connot receive damage from (or inflict damage to)</font> chaotic characters who are 10+ levels above you.It will not protect you on the battlefield, however.<br>
+Would you like to receive the Blessing of Protection now?<br> 
+<a action="bypass -h npc_%objectId%_GiveBlessing">Say yes.</a> 
 </body></html>
