--- a/trunk/datapack_development/data/html/teleporter/30483.htm
+++ b/trunk/datapack_development/data/html/teleporter/30483.htm
@@ -1,7 +1,9 @@
 <html><body>Gatekeeper Mozella:<br>
-My name is Mozella. I am one of the researchers dispatched from Oren's Ivory Tower to search for the giants of ere secrets, lost in the Tower of the Giants. Right now, our</td></tr>
-research team has discovered what we think is a space traveling device of the giants of ere, and we are trying to unlock its secrets. This place was untouched by the outside world so the mysteries of the giants remained undisturbed until our arrival, Unfortunately, the tower is full of frightful monsters.<br>
-If you wish to explore the mysterious ruins and brave their dangers, i will open the door of space and time and admit you to the inside of the tower.<br>
-<a action="bypass -h npc_%objectId%_Quest 1107_CrumaTower">Teleport into the tower</a><br>
+My name is Mozella. I am one of the researchers dispatched from Oren's Ivory Tower to search for the secrets lost in the Tower of the Giants. We recently discovered that we think is a device used by the Giants in a bygone age to travel through space and time, and we are trying to unlock its secrets. Fortunately, this place was untouched by the outside world during the long years, so the mysteries of the Giants have remained undisturbed until our arrival. Unfortunately, however, the Tower is also inhabited by a number of frightful monsters.
+<br>
+If you wish to brave the dangers to explore these mysterious ruins, however, I will open the door of space and time and admit you to the Tower's interior.
+<br>
+<a action="bypass -h npc_%objectId%_Quest 1107_CrumaTower">Teleport into the tower</a>
+<br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a>
 </body></html>
