HTM/SQL: Some "Admin Menu" updates...
- GMSHOP (some adds & more to come overtime).
- Few teleports adds to gracia area (thanks l2jOfficial for a tp loc inside instance).

Thanks Bloodshed & L2JO.

--- a/trunk/datapack_development/data/html/admin/gmshops.htm
+++ b/trunk/datapack_development/data/html/admin/gmshops.htm
@@ -23,6 +23,23 @@
 <tr>
 <td align=center><button action="bypass -h admin_help gmstore/gear/belts.htm" value="Belts" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td align=center><button action="bypass -h admin_buy 9909" value="Cloaks" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_help gmstore/hair.htm" value="Hair" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table>
+<br>
+<table width=260>
+<tr>
+<td align=center><button action="bypass -h admin_help gmstore/territory.htm" value="Territory" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_help gmstore/castles.htm" value="Castles" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_help gmstore/fortress.htm" value="Fortress" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table>
+<br>
+<table width=260>
+<tr>
+<td align=center><button action="bypass -h admin_help gmstore/consumables.htm" value="Consumables" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_help gmstore/scrolls.htm" value="Scrolls" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_help gmstore/craft.htm" value="Craft Area" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
 <br>
@@ -30,28 +47,11 @@
 <tr>
 <td align=center><button action="bypass -h admin_help gmstore/pets.htm" value="Pets" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td align=center><button action="bypass -h admin_help gmstore/fishing.htm" value="Fishing" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td align=center><button action="bypass -h admin_help gmstore/hair.htm" value="Hair" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr>
-<tr>
 <td align=center><button action="bypass -h admin_help gmstore/quest.htm" value="Quest Items" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
 <td align=center><button action="bypass -h admin_buy 9916" value="Currency" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr>
-</table>
-<br>
-<table width=260>
-<tr>
-<td align=center><button action="bypass -h admin_buy 9938" value="Shots" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td align=center><button action="bypass -h admin_help gmstore/scrolls.htm" value="Scrolls" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td align=center><button action="bypass -h admin_help gmstore/craft.htm" value="Craft Area" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr>
-<tr>
-<td align=center><button action="bypass -h admin_buy 9927" value="SA Crystals" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td align=center><button action="bypass -h admin_buy 9939" value="Crystal/Gem" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr>
-<tr>
-<td align=center><button action="bypass -h admin_buy 9928" value="Potions" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td align=center><button action="bypass -h admin_buy 9929" value="Elixirs" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td align=center><button action="bypass -h admin_buy 9948" value="Dyes" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_help gmstore/events.htm" value="Event Items" width=85 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
 <br>
