--- a/trunk/datapack_development/data/html/admin/teleports/location/gracia.htm
+++ b/trunk/datapack_development/data/html/admin/teleports/location/gracia.htm
@@ -7,12 +7,15 @@
 <td width=40><button value="Back" action="bypass -h admin_show_moves" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr></table>
 </center>
-<br>
-<br>
-
+<br><br>
 <center>
 <button action="bypass -h admin_move_to -149365 255309 -86" value="Gludio AirShip Field" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_move_to -186742 244167 2670" value="Keucereus Alliance Base" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_move_to -213473 244899 2017" value="Aerial Cleft" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -213678 210670 4408" value="Infinity Platform" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -246035 217337 -12209" value="Central Square" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -248345 220075 -12437" value="Scouting Pass" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -251432 217742 -12305" value="Fortress of Destruction" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -250403 208464 -11957" value="Jinryong's Throne" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 </center>
 </body></html>
