DP-Side for [L3118]

--- a/trunk/datapack_development/data/html/admin/abnormal.htm
+++ b/trunk/datapack_development/data/html/admin/abnormal.htm
@@ -13,10 +13,10 @@
 <table width=260><tr>
 <td><button value="Bleed" action="bypass -h admin_abnormal_menu 1 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Poison" action="bypass -h admin_abnormal_menu 2 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Unk3" action="bypass -h admin_abnormal_menu 4 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Unk4" action="bypass -h admin_abnormal_menu 8 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Red circle" action="bypass -h admin_abnormal_menu 4 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Ice" action="bypass -h admin_abnormal_menu 8 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>
-<td><button value="Unk5" action="bypass -h admin_abnormal_menu 10 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Wind" action="bypass -h admin_abnormal_menu 10 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Fear" action="bypass -h admin_abnormal_menu 20 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Stun" action="bypass -h admin_abnormal_menu 40 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Sleep" action="bypass -h admin_abnormal_menu 80 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
@@ -31,7 +31,7 @@
 <td><button value="Flame" action="bypass -h admin_abnormal_menu 4000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Unk16" action="bypass -h admin_abnormal_menu 8000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>
-<td><button value="Unk17" action="bypass -h admin_abnormal_menu 10000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Grow" action="bypass -h admin_abnormal_menu 10000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="FloatRoot" action="bypass -h admin_abnormal_menu 20000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="DanceStun" action="bypass -h admin_abnormal_menu 40000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="FireRStun" action="bypass -h admin_abnormal_menu 80000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
@@ -44,7 +44,7 @@
 <td><button value="IceFreeze" action="bypass -h admin_abnormal_menu 1000000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="EarthQuake" action="bypass -h admin_abnormal_menu 2000000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Unk27" action="bypass -h admin_abnormal_menu 4000000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Unk28" action="bypass -h admin_abnormal_menu 8000000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Invulnerable" action="bypass -h admin_abnormal_menu 8000000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>
 <td><button value="Vitality" action="bypass -h admin_abnormal_menu 10000000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
