HTM/XML: Blacksmith of Mammon update & more teleports in "Admin Menu", thanks Bloodshed.

--- a/trunk/datapack_development/data/html/admin/teleports/instance.htm
+++ b/trunk/datapack_development/data/html/admin/teleports/instance.htm
@@ -10,6 +10,8 @@
 <br>
 <br>
 <center>
+<button action="bypass -h admin_help teleports/instance/destruction.htm" value="Seed of Destruction" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_help teleports/instance/infinity.htm" value="Seed of Infinity" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_help teleports/instance/kamaloka.htm" value="Kamaloka Guards" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_help teleports/instance/darkcloudmansion.htm" value="Darkcloud Mansion" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_help teleports/instance/crystalcaverns.htm" value="Crystal Caverns" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
