--- a/trunk/datapack_development/data/html/admin/teleports/location/gracia.htm
+++ b/trunk/datapack_development/data/html/admin/teleports/location/gracia.htm
@@ -9,13 +9,19 @@
 </center>
 <br><br>
 <center>
-<button action="bypass -h admin_move_to -149365 255309 -86" value="Gludio AirShip Field" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
-<button action="bypass -h admin_move_to -186742 244167 2670" value="Keucereus Alliance Base" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
-<button action="bypass -h admin_move_to -213473 244899 2017" value="Aerial Cleft" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
-<button action="bypass -h admin_move_to -213678 210670 4408" value="Infinity Platform" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
-<button action="bypass -h admin_move_to -246035 217337 -12209" value="Central Square" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
-<button action="bypass -h admin_move_to -248345 220075 -12437" value="Scouting Pass" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
-<button action="bypass -h admin_move_to -251432 217742 -12305" value="Fortress of Destruction" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
-<button action="bypass -h admin_move_to -250403 208464 -11957" value="Jinryong's Throne" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -149365 255309 -86" value="Gludio AirShip Field" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -186742 244167 2670" value="Keucereus Alliance Base" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -213473 244899 2017" value="Aerial Cleft" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<br>Seed of Infinity Area's<br1>
+<button action="bypass -h admin_move_to -213678 210670 4408" value="Infinity Platform" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -183443 205834 -12902" value="Death Gate" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -179548 209584 -15504" value="Heart of Infinity" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -176236 208208 -11949" value="Hall of Erosion" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -187567 205570 -9543" value="Hall of Suffering" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<br>Seed of Destruction Area's<br1>
+<button action="bypass -h admin_move_to -246035 217337 -12209" value="Central Square" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -248345 220075 -12437" value="Scouting Pass" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -251432 217742 -12305" value="Fortress of Destruction" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -250403 208464 -11957" value="Jinryong's Throne" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 </center>
 </body></html>
