--- a/trunk/datapack_development/data/html/admin/teleports/townarea/gludio.htm
+++ b/trunk/datapack_development/data/html/admin/teleports/townarea/gludio.htm
@@ -10,10 +10,11 @@
 <br>
 <br>
 <center>
-<button action="bypass -h admin_move_to -56235 106668 -3773" value="Ruins of Agony" width=200 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
-<button action="bypass -h admin_move_to -20043 137688 -3896" value="Ruins of Despair" width=200 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
-<button action="bypass -h admin_move_to -26111 173692 -4152" value="Ant's Nest" width=200 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
-<button action="bypass -h admin_move_to -16730 209417 -3664" value="Southern Entrance of Wastelands" width=200 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
-<button action="bypass -h admin_move_to -23403 186599 -4317" value="Wastelands" width=200 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -56235 106668 -3773" value="Ruins of Agony" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -20043 137688 -3896" value="Ruins of Despair" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -26111 173692 -4152" value="Ant's Nest" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -16730 209417 -3664" value="South of Wastelands" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -23403 186599 -4317" value="Wastelands" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to -149365 255309 -86" value="Gludio AirShip Field" width=180 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 </center>
 </body></html>
