--- a/trunk/datapack_development/data/html/default/31340.htm
+++ b/trunk/datapack_development/data/html/default/31340.htm
@@ -1,6 +1,9 @@
 <html><body>Captain Mathias:<br>
-Welcome to the capital of the kingdom of Elmore! You must be exhausted from your long journey! You're safe here. You can relax.<br>
-<a action="bypass -h npc_%objectId%_Chat 1">"There are ominous rumors going around! Have you heard them?"</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the lord & tax rate info.</a><br>
+Welcome, traveler, to the capital of the kingdom of Elmore. You must be tired from your long journey. May your time in our fair city be restful and relaxing.<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Ask about Kamaloka.</a><br>
+<a action="bypass -h npc_%objectId%_Chat 2">Look at the list of Kamaloka</a><br>
+<a action="bypass -h npc_%objectId%_Chat 3">Enter Kamaloka</a><br>
+<a action="bypass -h npc_%objectId%_Chat 4">"Do you know anything about the ominous rumor I heard?"</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a>
 </body></html>
