--- a/trunk/datapack_development/data/html/default/30196-2.htm
+++ b/trunk/datapack_development/data/html/default/30196-2.htm
@@ -7,4 +7,4 @@ Captain Gosta (Heine): Level 43, 46, 49<br>
 Captain Mouen (Town of Oren): Level 53, 56, 59<br>
 Captain Vishotsky (Town of Schuttgart) Level 63, 66, 69<br>
 Captain Mathias (Town of Rune): Level 73, 78, 81
-<body><html>
+</body></html>
