HTM: Admin Teleports Fixes (fixing "back" buttons, they were backing up to main TP menu instead of really back 1 page, and a few tweaks), thanks Bloodshed.

--- a/trunk/datapack_development/data/html/admin/teleports/sevensigns/7s.htm
+++ b/trunk/datapack_development/data/html/admin/teleports/sevensigns/7s.htm
@@ -4,7 +4,7 @@
 <table width=260>
 <tr><td width=40><button value="Main" action="bypass -h admin_admin" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td width=180><center>Seven Signs</center></td>
-<td width=40><button value="Back" action="bypass -h admin_show_moves" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td width=40><button value="Back" action="bypass -h admin_help teleports/sevensigns.htm" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr></table>
 </center>
 <br>
@@ -21,7 +21,7 @@
 </tr>
 <tr>
 <td align=center><button action="bypass -h admin_move_to 172600 -17599 -4899" value="Disciple's" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td align=center><button action="bypass -h admin_move_to 114230 84546 -6539" value="Forbidden Path" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_move_to 12521 -248481 -9585" value="Forbidden Path" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 <tr>
 <td align=center><button action="bypass -h admin_move_to 118576 132800 -4832" value="Martyrdom" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
@@ -37,7 +37,7 @@
 </tr>
 <tr>
 <td align=center><button action="bypass -h admin_move_to 111552 174014 -5440" value="Worshippers" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td align=center><button action="bypass -h admin_move_to 43242 143933 -5382" value="Heretics" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_move_to -53174 -250275 -7911" value="Heretics" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 <tr>
 <td align=center><button action="bypass -h admin_move_to 45249 123548 -5411" value="Pilgrim's" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
