small fix in foreman gate htmls

--- a/trunk/datapack_development/data/html/fortress/35796-d.htm
+++ b/trunk/datapack_development/data/html/fortress/35796-d.htm
@@ -1,13 +1,5 @@
-<html><body>%npcname%:<br>
-What is your command?
-<br>
-<center>
-<a action="bypass -h npc_%objectId%_operate_door 1 22180001 22180008">Open the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 22180001 22180008">Close the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 22180002 22180003 22180004 22180005">Open the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 22180002 22180003 22180004 22180005">Close the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 22180001 22180008 22180002 22180003 22180004 22180005 22180006 22180007">Open All Fort Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 22180001 22180008 22180002 22180003 22180004 22180005 22180006 22180007">Close All Fort Gates</a>
-</center>
-</body></html> 
-
+<html><body><center><br><br>
+<a action="bypass -h npc_%objectId%_operate_door 1 22180001 22180008 22180002 22180003 22180004 22180005 22180006 22180007">Open the gate</a><br>
+<a action="bypass -h npc_%objectId%_operate_door 0 22180001 22180008 22180002 22180003 22180004 22180005 22180006 22180007">Close the gate</a><br>
+<action="bypass -h npc_%objectId%_Link fortress/foreman.htm">Return</a>
+</center></body></html>
