--- a/trunk/datapack_development/data/html/fortress/35927-d.htm
+++ b/trunk/datapack_development/data/html/fortress/35927-d.htm
@@ -1,13 +1,5 @@
-<html><body>%npcname%:<br>
-What is your command?
-<br>
-<center>
-<a action="bypass -h npc_%objectId%_operate_door 1 24150003 24150008">Open the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 24150003 24150008">Close the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 24150004 24150005 24150006 24150007">Open the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 24150004 24150005 24150006 24150007">Close the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 24150003 24150008 24150004 24150005 24150006 24150007 24150001 24150002 24150009 24150010 24150011 24150012">Open All Fort Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 24150003 24150008 24150004 24150005 24150006 24150007 24150001 24150002 24150009 24150010 24150011 24150012">Close All Fort Gates</a>
-</center>
-</body></html> 
-
+<html><body><center><br><br>
+<a action="bypass -h npc_%objectId%_operate_door 1 24150003 24150008 24150004 24150005 24150006 24150007 24150001 24150002 24150009 24150010 24150011 24150012">Open the gate</a><br>
+<a action="bypass -h npc_%objectId%_operate_door 0 24150003 24150008 24150004 24150005 24150006 24150007 24150001 24150002 24150009 24150010 24150011 24150012">Close the gate</a><br>
+<action="bypass -h npc_%objectId%_Link fortress/foreman.htm">Return</a>
+</center></body></html>
