--- a/trunk/datapack_development/data/html/fortress/36210-d.htm
+++ b/trunk/datapack_development/data/html/fortress/36210-d.htm
@@ -1,12 +1,5 @@
-<html><body>%npcname%:<br>
-What is your command?
-<br>
-<center>
-<a action="bypass -h npc_%objectId%_operate_door 1 23170001 23170012">Open the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 23170001 23170012">Close the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 23170004 23170005 23170008 23170009">Open the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 23170004 23170005 23170008 23170009">Close the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 23170001 23170012 23170004 23170005 23170008 23170009 23170002 23170003 23170006 23170007 23170010 23170011">Open All Fort Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 23170001 23170012 23170004 23170005 23170008 23170009 23170002 23170003 23170006 23170007 23170010 23170011">Close All Fort Gates</a>
-</center>
-</body></html>
+<html><body><center><br><br>
+<a action="bypass -h npc_%objectId%_operate_door 1 23170001 23170012 23170004 23170005 23170008 23170009 23170002 23170003 23170006 23170007 23170010 23170011">Open the gate</a><br>
+<a action="bypass -h npc_%objectId%_operate_door 0 23170001 23170012 23170004 23170005 23170008 23170009 23170002 23170003 23170006 23170007 23170010 23170011">Close the gate</a><br>
+<action="bypass -h npc_%objectId%_Link fortress/foreman.htm">Return</a>
+</center></body></html>
