--- a/trunk/datapack_development/data/html/fortress/35727-d.htm
+++ b/trunk/datapack_development/data/html/fortress/35727-d.htm
@@ -1,13 +1,5 @@
-<html><body>%npcname%:<br>
-What is your command?
-<br>
-<center>
-<a action="bypass -h npc_%objectId%_operate_door 1 20230003 20230010">Open the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 20230003 20230010">Close the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 20230004 20230005 20230008 20230009">Open the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 20230004 20230005 20230008 20230009">Close the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 20230003 20230010 20230004 20230005 20230008 20230009 20230006 20230007">Open All Fort Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 20230003 20230010 20230004 20230005 20230008 20230009 20230006 20230007">Close All Fort Gates</a>
-</center>
-</body></html> 
-
+<html><body><center><br><br>
+<a action="bypass -h npc_%objectId%_operate_door 1 20230003 20230010 20230004 20230005 20230008 20230009 20230006 20230007">Open the gate</a><br>
+<a action="bypass -h npc_%objectId%_operate_door 0 20230003 20230010 20230004 20230005 20230008 20230009 20230006 20230007">Close the gate</a><br>
+<action="bypass -h npc_%objectId%_Link fortress/foreman.htm">Return</a>
+</center></body></html>
