--- a/trunk/datapack_development/data/html/fortress/35758-d.htm
+++ b/trunk/datapack_development/data/html/fortress/35758-d.htm
@@ -1,13 +1,5 @@
-<html><body>%npcname%:<br>
-What is your command?
-<br>
-<center>
-<a action="bypass -h npc_%objectId%_operate_door 1 23210001 23210012">Open the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 23210001 23210012">Close the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 23210006 23210007 23210010 23210011">Open the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 23210006 23210007 23210010 23210011">Close the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 23210001 23210012 23210006 23210007 23210010 23210011 23210002 23210003 23210004 23210005 23210008 23210009">Open All Fort Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 23210001 23210012 23210006 23210007 23210010 23210011 23210002 23210003 23210004 23210005 23210008 23210009">Close All Fort Gates</a>
-</center>
-</body></html> 
-
+<html><body><center><br><br>
+<a action="bypass -h npc_%objectId%_operate_door 1 23210001 23210012 23210006 23210007 23210010 23210011 23210002 23210003 23210004 23210005 23210008 23210009">Open the gate</a><br>
+<a action="bypass -h npc_%objectId%_operate_door 0 23210001 23210012 23210006 23210007 23210010 23210011 23210002 23210003 23210004 23210005 23210008 23210009">Close the gate</a><br>
+<action="bypass -h npc_%objectId%_Link fortress/foreman.htm">Return</a>
+</center></body></html>
