--- a/trunk/datapack_development/data/html/fortress/35896-d.htm
+++ b/trunk/datapack_development/data/html/fortress/35896-d.htm
@@ -1,13 +1,5 @@
-<html><body>%npcname%:<br>
-What is your command?
-<br>
-<center>
-<a action="bypass -h npc_%objectId%_operate_door 1 23240001 23240008">Open the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 23240001 23240008">Close the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 23240002 23240003 23240006 23240007">Open the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 23240002 23240003 23240006 23240007">Close the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 23240001 23240008 23240002 23240003 23240006 23240007 23240004 23240005">Open All Fort Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 23240001 23240008 23240002 23240003 23240006 23240007 23240004 23240005">Close All Fort Gates</a>
-</center>
-</body></html> 
-
+<html><body><center><br><br>
+<a action="bypass -h npc_%objectId%_operate_door 1 23240001 23240008 23240002 23240003 23240006 23240007 23240004 23240005">Open the gate</a><br>
+<a action="bypass -h npc_%objectId%_operate_door 0 23240001 23240008 23240002 23240003 23240006 23240007 23240004 23240005">Close the gate</a><br>
+<action="bypass -h npc_%objectId%_Link fortress/foreman.htm">Return</a>
+</center></body></html>
