--- a/trunk/datapack_development/data/html/fortress/35965-d.htm
+++ b/trunk/datapack_development/data/html/fortress/35965-d.htm
@@ -1,13 +1,5 @@
-<html><body>%npcname%:<br>
-What is your command?
-<br>
-<center>
-<a action="bypass -h npc_%objectId%_operate_door 1 22160001 22160012">Open the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 22160001 22160012">Close the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 22160004 22160005 22160008 22160009">Open the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 22160004 22160005 22160008 22160009">Close the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 22160001 22160012 22160004 22160005 22160008 22160009 22160002 22160003 22160006 22160007 22160010 22160011">Open All Fort Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 22160001 22160012 22160004 22160005 22160008 22160009 22160002 22160003 22160006 22160007 22160010 22160011">Close All Fort Gates</a>
-</center>
-</body></html> 
-
+<html><body><center><br><br>
+<a action="bypass -h npc_%objectId%_operate_door 1 22160001 22160012 22160004 22160005 22160008 22160009 22160002 22160003 22160006 22160007 22160010 22160011">Open the gate</a><br>
+<a action="bypass -h npc_%objectId%_operate_door 0 22160001 22160012 22160004 22160005 22160008 22160009 22160002 22160003 22160006 22160007 22160010 22160011">Close the gate</a><br>
+<action="bypass -h npc_%objectId%_Link fortress/foreman.htm">Return</a>
+</center></body></html>
