--- a/trunk/datapack_development/data/html/fortress/36034-d.htm
+++ b/trunk/datapack_development/data/html/fortress/36034-d.htm
@@ -1,12 +1,5 @@
-<html><body>%npcname%:<br>
-What is your command?
-<br>
-<center>
-<a action="bypass -h npc_%objectId%_operate_door 1 20220021 20220026">Open the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 20220021 20220026">Close the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 20220022 20220023 20220024 20220025">Open the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 20220022 20220023 20220024 20220025">Close the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 20220021 20220026 20220022 20220023 20220024 20220025 20220017 20220018 20220019 20220020 20220027 20220028">Open All Fort Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 20220021 20220026 20220022 20220023 20220024 20220025 20220017 20220018 20220019 20220020 20220027 20220028">Close All Fort Gates</a>
-</center>
-</body></html>
+<html><body><center><br><br>
+<a action="bypass -h npc_%objectId%_operate_door 1 20220021 20220026 20220022 20220023 20220024 20220025 20220017 20220018 20220019 20220020 20220027 20220028">Open the gate</a><br>
+<a action="bypass -h npc_%objectId%_operate_door 0 20220021 20220026 20220022 20220023 20220024 20220025 20220017 20220018 20220019 20220020 20220027 20220028">Close the gate</a><br>
+<action="bypass -h npc_%objectId%_Link fortress/foreman.htm">Return</a>
+</center></body></html>
