--- a/trunk/datapack_development/data/html/fortress/36141-d.htm
+++ b/trunk/datapack_development/data/html/fortress/36141-d.htm
@@ -1,12 +1,5 @@
-<html><body>%npcname%:<br>
-What is your command?
-<br>
-<center>
-<a action="bypass -h npc_%objectId%_operate_door 1 20200001 20200008">Open the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 20200001 20200008">Close the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 20200002 20200003 20200006 20200007">Open the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 20200002 20200003 20200006 20200007">Close the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 20200001 20200002 20200003 20200004 20200005 20200006 20200007 20200008">Open All Fort Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 20200001 20200002 20200003 20200004 20200005 20200006 20200007 20200008">Close All Fort Gates</a>
-</center>
-</body></html>
+<html><body><center><br><br>
+<a action="bypass -h npc_%objectId%_operate_door 1 20200001 20200002 20200003 20200004 20200005 20200006 20200007 20200008">Open the gate</a><br>
+<a action="bypass -h npc_%objectId%_operate_door 0 20200001 20200002 20200003 20200004 20200005 20200006 20200007 20200008">Close the gate</a><br>
+<action="bypass -h npc_%objectId%_Link fortress/foreman.htm">Return</a>
+</center></body></html>
