--- a/trunk/datapack_development/data/html/fortress/36355-d.htm
+++ b/trunk/datapack_development/data/html/fortress/36355-d.htm
@@ -1,12 +1,5 @@
-<html><body>%npcname%:<br>
-What is your command?
-<br>
-<center>
-<a action="bypass -h npc_%objectId%_operate_door 1 22150001 22150008">Open the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 22150001 22150008">Close the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 22150002 22150003 22150006 22150007">Open the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 22150002 22150003 22150006 22150007">Close the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 22150001 22150008 22150002 22150003 22150006 22150007 22150004 22150005">Open All Fort Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 22150001 22150008 22150002 22150003 22150006 22150007 22150004 22150005">Close All Fort Gates</a>
-</center>
-</body></html>
+<html><body><center><br><br>
+<a action="bypass -h npc_%objectId%_operate_door 1 22150001 22150008 22150002 22150003 22150006 22150007 22150004 22150005">Open the gate</a><br>
+<a action="bypass -h npc_%objectId%_operate_door 0 22150001 22150008 22150002 22150003 22150006 22150007 22150004 22150005">Close the gate</a><br>
+<action="bypass -h npc_%objectId%_Link fortress/foreman.htm">Return</a>
+</center></body></html>
