abnormal update for painkiller and death mark skills and admin effect menu update require [L3294]

--- a/trunk/datapack_development/data/html/admin/effects_menu.htm
+++ b/trunk/datapack_development/data/html/admin/effects_menu.htm
@@ -29,7 +29,9 @@
 </tr><tr>
 <td><button value="Effect" action="bypass -h admin_effect_menu $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Social" action="bypass -h admin_social_menu $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Special" action="bypass -h admin_special_menu $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Abnormal" action="bypass -h admin_abnormal_menu $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr><tr>
 <td><button value="Transfrm" action="bypass -h admin_transform_menu $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr></table>
 <br>
