HTM: A lot of typo fixes, thanks janiii & JIV.

--- a/trunk/datapack_development/data/html/default/32135-13.htm
+++ b/trunk/datapack_development/data/html/default/32135-13.htm
@@ -1,4 +1,4 @@
-<html><body>Newbie Guide:<br<
+<html><body>Newbie Guide:<br>
 Weapons are divided into 7 types: One-Handed
 Sword, Two-Handed Sword, Blunt Weapon,
 Dagger, Polearm, Fist and Bow. Among those,
