--- a/trunk/datapack_development/data/html/default/32135-14.htm
+++ b/trunk/datapack_development/data/html/default/32135-14.htm
@@ -1,4 +1,4 @@
-<html><body>Newbie Guide:<br<
+<html><body>Newbie Guide:<br>
 If you have hunted well, you can equip yourself
 with good armor. Otherwise, you will have to
 upgrade gradually. Once you've reached level 6,
