--- a/trunk/datapack_development/data/html/default/32135-15.htm
+++ b/trunk/datapack_development/data/html/default/32135-15.htm
@@ -1,4 +1,4 @@
-<html><body>Newbie Guide:<br<
+<html><body>Newbie Guide:<br>
 The <font color="LEVEL">One-Handed Sword</font>is the most basic
  weapon in the game, prossessing balanced
 attributes. The Squire's Sword you began your
