--- a/trunk/datapack_development/data/html/default/32135-16.htm
+++ b/trunk/datapack_development/data/html/default/32135-16.htm
@@ -1,4 +1,4 @@
-<html><body>Newbie Guide:<br<
+<html><body>Newbie Guide:<br>
 A<font color="LEVEL">One-Handed Blunt Weapon</font>has a higher
 accuracy than other weapons, but a low Critical
  Rate. Blunt Weapons are designed to <font color="LEVEL">reliably
