--- a/trunk/datapack_development/data/html/default/32135-17.htm
+++ b/trunk/datapack_development/data/html/default/32135-17.htm
@@ -1,4 +1,4 @@
-<html><body>Newbie Guide:<br<
+<html><body>Newbie Guide:<br>
 A<font color="LEVEL">Two-Handed Sword or Two-Handed Blunt
 Weapon</font> possesses both formidable power and
 reach compared to their one-handed
