--- a/trunk/datapack_development/data/html/default/32135-18.htm
+++ b/trunk/datapack_development/data/html/default/32135-18.htm
@@ -1,4 +1,4 @@
-<html><body>Newbie Guide:<br<
+<html><body>Newbie Guide:<br>
 A<font color="LEVEL">Dagger</font> allows you to attack with unsurpassed
 speed, as well as the greatest chance of
 inflicting critical damage. However, its accuracy
