HTM/JAVA: Enchant Belt in //enchant

--- a/trunk/datapack_development/data/html/admin/enchant.htm
+++ b/trunk/datapack_development/data/html/admin/enchant.htm
@@ -26,5 +26,7 @@
 <td><button value="Leggings" action="bypass -h admin_setel $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Boots" action="bypass -h admin_seteb $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Ring" action="bypass -h admin_setrf $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Ring" action="bypass -h admin_setlf $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
+<td><button value="Ring" action="bypass -h admin_setlf $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr><tr>
+<td><button value="Belt" action="bypass -h admin_setbe $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
 </table></body></html>
